--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
     @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 body {
     padding: 0px;
+    margin: 0;
+    width: 100%;
 }
 .navbartext{
+    padding: 1rem;
     font-family: 'Nunito', sans-serif;
     text-align: center;
     color: #FEF2F2;
@@ -10,20 +13,26 @@ body {
 }
 nav{
     margin: auto;
-    height: 6rem;
+    width: 100%;
     max-width: 600px;
     background-color: #A78BFA;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
+
+section{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .inputdiv{
-    margin: auto;
+    box-shadow: 1px 5px 6px rgba(0, 0, 0, 0.4);
+    margin: 1rem auto;
     border-radius: 1rem;
-    padding: 2rem;
-    margin-top: 2rem;
-    max-width: 300px;
+    padding: 1.5rem;
+    max-width: 600px;
     text-align: center;
-    height: 16rem;
     border: 1px solid #9CA3AF;
 }
 .container{
@@ -43,34 +52,44 @@ nav{
     background-color: #A78BFA;
 }
 
+
+.foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 footer{
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    
     margin: auto;
-    margin-top: 5rem;
-    height: 14.7rem;
     max-width: 600px;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
     background-color: #A78BFA;
-    padding: 0px;
     text-align: center;
 }
 .footer-header
 {
-    padding-top: 3rem;
+    margin-top: 1rem;
     font-size: x-large;
     color:white;
     text-align: center;
 }
 .link{
-    color:#DDD6FE;
+    color: white;
     box-sizing: border-box;
     text-decoration: none;
-    padding: 0.3rem;
+    
 }
 .fab{
     font-size: 2.5rem;
 }
 ul{
+    margin: 0;
+    padding: 0.5rem;
     padding-inline-start: 0px;
 }
 li{
@@ -89,4 +108,31 @@ li{
     max-width: 500px;
     margin: auto;
     max-height: 162px;
+}
+form{
+    flex-direction: column;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+}
+input{
+    padding: 0.5rem;
+    margin: 0.5rem;
+    width: 100%;
+}
+input[type=date]{
+    cursor: pointer;
+}
+button{
+    font-size: 1rem;
+    border: none;
+    padding: 0.5rem;
+    border-radius:5px ;
+}
+button:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+a:hover{
+    opacity: 0.7;
 }
