--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-size: x-large;
 }
 nav{
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
     max-width: 600px;
     background-color: #A78BFA;
@@ -21,11 +21,16 @@ nav{
 }
 
 section{
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
+main{
+    max-width: 600px;
+    margin: 0 auto;
+    flex-grow: 1;
+}
 .inputdiv{
     box-shadow: 1px 5px 6px rgba(0, 0, 0, 0.4);
     margin: 1rem auto;
@@ -60,11 +65,8 @@ section{
     align-items: center;
 }
 footer{
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    
     margin: auto;
+    width: 100%;
     max-width: 600px;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
@@ -89,7 +91,7 @@ footer{
 }
 ul{
     margin: 0;
-    padding: 0.5rem;
+    padding: 0 0 1rem 0;
     padding-inline-start: 0px;
 }
 li{
